Fix gap between sidebar nav links

--- a/app/assets/stylesheets/custom/components.css
+++ b/app/assets/stylesheets/custom/components.css
@@ -19,9 +19,13 @@
 }
 
 @utility nav-link {
-  @apply flex max-md:flex-col items-center gap-0.75 md:gap-2 pt-2.25 pb-1.75 md:px-3 md:py-2 rounded-lg text-2xs md:text-sm whitespace-nowrap text-light md:hover:bg-neutral-100 md:hover:dark:bg-neutral-900 focus-visible:bg-neutral-100 hover:text-primary-600 transition-all duration-150 focus-visible:ring-2 focus-visible:ring-primary-600 focus-visible:outline-none  active:scale-97;
+  @apply flex max-md:flex-col items-center gap-0.75 md:gap-2 pt-2.25 pb-1.75 md:px-3 md:py-2 rounded-lg text-2xs md:text-sm whitespace-nowrap text-light focus-visible:bg-neutral-100 focus-visible:ring-2 focus-visible:ring-primary-600 focus-visible:outline-none active:scale-97;
 
   &.nav-link-active {
+    @apply md:bg-neutral-100 md:dark:bg-neutral-900 text-primary-600;
+  }
+
+  a:hover & {
     @apply md:bg-neutral-100 md:dark:bg-neutral-900 text-primary-600;
   }
 }
